--- a/src/style/_media.sass
+++ b/src/style/_media.sass
@@ -218,29 +218,25 @@
                     bottom: -10px
                     left: -10px
                     margin: auto
-                    width: 2em
+                    width: calc(1.2 * 2em)
                     height: 2px
                     background: #7c7a6d
                     transition: width .1s ease-in-out, transform .1s ease-in-out, top .05s ease-in-out .1s, bottom .05s ease-in-out .1s, background .15s ease-in-out
                 &::after
-                    transform: rotate(0deg)
-                    top: 0
+                    transform: rotate(45deg)
+                    top: -10px
                 &::before
-                    transform: rotate(0deg)
-                    bottom: 0
+                    transform: rotate(-45deg)
+                    bottom: -10px
                 &:hover
                     cursor: pointer
                     &::after, &::before
                         background: $cTEXTprimary
                         transition: width .2s ease-in-out .15s ,transform .2s ease-in-out .15s, top .1s ease-in-out, bottom .1s ease-in-out, background .15s ease-in-out .15s
                     &::after
-                        transform: rotate(45deg)
                         width: calc(1.3 * 2em)
-                        top: -10px
                     &::before
-                        transform: rotate(-45deg)
                         width: calc(1.3 * 2em)
-                        bottom: -10px
 
 // Large devices (desktops, from 992px to 1200px)
 @media screen and (min-width: 992px) and (max-width: 1199.98px)
